tests/negative/typecheck/select_not_exist.orng
// select_not_exist.orng:8:7: error: member `c` not in struct `My_Type`
//     x.c
//      ^
// 
struct My_Type {a: Int, b: Int}
fn main() -> Int {
    let x = My_Type(3, 4)
    x.c
    0
}